# TerminalQuotes

./: .gitignore  CLAUDE.md  CURATION_SUMMARY.md  DAY2_ASCII_ART_PLAN.md  QUOTE_EXTRACTION_TASK.md  README.md  TEMPLATE_CLAUDE.md  TODOS.md  add_gutenberg_quotes.py  ascii_art_curation.json  claude-metaprompt-implementation.md  day1_starter_code.py  how-to-use-metaprompt.md  main.py  pyproject.toml  stoic-terminal-implementation-plan.md  stoic-terminal-quick-reference.md
ClaudeUsage/: git_workflow.md
data/ascii_art/: metadata.yaml
data/ascii_art/adversity/: anvil_blacksmith_20.txt  anvil_forge_20.txt  lightning_forked_15.txt  lightning_simple_15.txt  mountain_climber_25.txt  mountain_peak_20.txt  rain_cloud_15.txt  tornado_debris_20.txt  tornado_funnel_20.txt  wave_breaking_20.txt  wave_crash_25.txt  waves_calm_25.txt
data/ascii_art/animals/: bird_flying_60.txt  birds_perched_120.txt  cat_cute_80.txt  cat_head_80.txt  cat_playful_80.txt  cat_portrait_80.txt  cat_sleeping_60.txt  cats_conversation_120.txt  (+3 more)
data/ascii_art_archive/: ARCHIVED.md
research/: ASCII Art Research - Birds.md  ASCII Art Research - Borders.md  ASCII Art Research - Buildings.md  ASCII Art Research - Cats.md  ASCII Art Research - Designs.md  ASCII Art Research - Furniture.md  ASCII Art Research - Liminal.md  ASCII Art Research - Other.md  ASCII Art Research - Plants&Nature.md  ASCII Art Research - Web Search Results.md  ascii art research.md  lightweight embedding models search results.md  philosophical quote DB research.md  weather apis research.md
tools/: CURATION_PROCESSING_GUIDE.md  ascii_art_viewer.html  validate_curation.py
(+95 files in other folders)
